--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,12 +30,18 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">Имена</th>
+                <th scope="col">#</th>
+                <th scope="col">Имя</th>
+                <th scope="col">Описание</th>
+                <th scope="col">Адресс</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="user: ${users}">
-                <td th:text="${user}"></td>
+            <tr th:each="accident: ${accidents}">
+                <td th:text="${accident.id}"></td>
+                <td th:text="${accident.name}"></td>
+                <td th:text="${accident.text}"></td>
+                <td th:text="${accident.address}"></td>
             </tr>
             </tbody>
         </table>
